--- a/views/teacher/marks-entry.ejs
+++ b/views/teacher/marks-entry.ejs
@@ -43,10 +43,10 @@
             <tr>
               <th>Roll No</th>
               <th>Name</th>
-              <th>Math</th>
+              <th>Mathematics</th>
               <th>Science</th>
               <th>English</th>
-              <th>Hindi</th>
+              <th>Hindi/Urdu</th>
               <th>Social Science</th>
             </tr>
           </thead>
