payment of fees integrated

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -11,11 +11,11 @@
   <a href="/transport" class="btn btn-custom">
     <i class="bi bi-truck me-2"></i>Transport Fare
   </a>
-  <a href="#" class="btn btn-custom">
-    <i class="bi bi-credit-card-2-front me-2"></i>Online Fee Payment
+  <a href="/login/student" class="btn btn-custom">
+    <i class="bi bi-credit-card-2-front me-2"></i> Online Fee Payment
   </a>
-  <a href="#" class="btn btn-custom">
-    <i class="bi bi-people me-2"></i>Alumni
+  <a href="/feeStructure" class="btn btn-custom">
+    <i class="bi bi-people me-2"></i>Fee Structure
   </a>
   <a href="#" class="btn btn-custom">
     <i class="bi bi-bell me-2"></i>Notifications
