--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -7,7 +7,7 @@
         <div class="row g-4 align-items-center">
           <!-- Left: Student Photo -->
           <div class="col-md-4 text-center">
-            <img src="<%='https://passport-photo.online/_optimized/prepare2.0498e1e2-opt-1920.WEBP'%>" alt="Student Photo" class="img-thumbnail rounded-circle shadow" style="width: 200px; height: 200px; object-fit: cover;">
+            <img src="<%=student.photo%>" alt="Student Photo" class="img-thumbnail rounded-circle shadow" style="width: 200px; height: 200px; object-fit: cover;">
             <h4 class="mt-3 fw-bold text-primary"><%= student.name %></h4>
             <span class="badge bg-secondary fs-6"><%= student.class %> - <%= student.section %></span>
           </div>
