--- a/views/admin/teacher/home.ejs
+++ b/views/admin/teacher/home.ejs
@@ -20,7 +20,7 @@
           <a href="/admin/results" class="nav-link text-white"><i class="bi bi-journal-check me-2"></i>Results</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="/admin/settings" class="nav-link text-white"><i class="bi bi-gear me-2"></i>Settings</a>
+          <a href="/admin/class-fees/edit" class="nav-link text-white"><i class="bi bi-gear me-2"></i>Fee Setting</a>
         </li>
         <li class="nav-item mt-4">
           <a href="/logout" class="nav-link text-danger"><i class="bi bi-box-arrow-right me-2"></i>Logout</a>
