added the Result showing condition

--- a/views/student/results.ejs
+++ b/views/student/results.ejs
@@ -55,7 +55,7 @@
       <p><strong>Parent Name:</strong> <%= student.parentName %></p>
     </div>
     <div style="width: 30%; text-align: center;">
-      <img src="<%= 'https://passport-photo.online/_optimized/prepare2.0498e1e2-opt-1920.WEBP'%>" style="border: 1px solid #000; height: 120px; width: 90px; object-fit: cover;">
+      <img src="<%= student.photo%>" style="border: 1px solid #000; height: 120px; width: 90px; object-fit: cover;">
     </div>
   </div>
 
