--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -40,5 +40,5 @@
   <!-- Footer -->
  <footer class="bg-black text-white text-center py-3">
     &copy; | Indra Shishu Mandir | All Rights Reserved &nbsp;&nbsp;
-    <strong>Designed by Nakul & Irfan.</strong>
+    <strong>Designed by Nakul ,Irfan & Mahesh.</strong>
   </footer>
