--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -8,6 +8,9 @@
     </div>
   <!-- Button Section -->
 <div class="d-flex flex-wrap gap-3 justify-content-center my-4">
+  <a href="/chat" class="btn btn-danger">
+    <i class="bi bi-people me-2"></i>AI CHATBOT
+  </a>
   <a href="/transport" class="btn btn-custom">
     <i class="bi bi-truck me-2"></i>Transport Fare
   </a>
